@@ -12,3 +12,5 @@ NRAO-DiFX version 1.1
 Version 0.3  20080715
 ~~~~~~~~~~~
 New branch version post version 1.1
+Add table (enum) of error levels
+Binary message sending, intended for Short Term Accumations (STAs)
